Upload and serve zero-coverage-report differently
- We upload zero coverage first
- We upload rest of reports
- On report ingest, if there's a new revision in redis download a fresh zero coverage report
- Serve via filesystem
